[gd_scene load_steps=8 format=2]

[ext_resource path="res://choice.png" type="Texture" id=1]
[ext_resource path="res://new_kiddofont.tres" type="DynamicFont" id=2]
[ext_resource path="res://VisualNovel/AnswerButton.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "arrow"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Path2D/PathFollow2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 572.038 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "notSelected"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.541176, 0.368627, 0.368627, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Path2D/PathFollow2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 572.04, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "selected"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Path2D/PathFollow2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 3.03143, 1 ),
"update": 0,
"values": [ 572.038, 572.038, 550.04, 1432.96 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 736.141, 134.265, 0, 0, 0, 0, -705.45, 112.45 )
}

[node name="A" type="Control"]
margin_right = 720.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/arrow = SubResource( 1 )
anims/notSelected = SubResource( 2 )
anims/selected = SubResource( 3 )

[node name="Arrow" type="Sprite" parent="."]
self_modulate = Color( 0.109804, 0.6, 0.207843, 1 )
position = Vector2( 453.906, 133.974 )
rotation = 0.00751161
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Arrow"]
margin_left = -215.299
margin_top = -39.6226
margin_right = 222.701
margin_bottom = 16.3774
rect_rotation = 3.5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "bhj,vhy,jjvghhhhhh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Arrow/Label"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 2.0
rect_min_size = Vector2( 438, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 360, 128.692 )

[node name="Path2D" type="Path2D" parent="Node2D"]
position = Vector2( -360, -128.692 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Node2D/Path2D"]
position = Vector2( 163.797, 125.604 )
rotation = -3.13408
offset = 572.038
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Node2D/Path2D/PathFollow2D"]
position = Vector2( -290.164, -6.18997 )
remote_path = NodePath("../../../../Arrow")
update_rotation = false
update_scale = false
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="Arrow/Label/Button" to="." method="_on_Button_pressed"]
